gccida/g0/df_bb_reg_info_compute
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/df_bb_reg_info_compute/src/df.c:2292:4: error: expected ';' after expression
rtx reg; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/df_bb_reg_info_compute/src/df.c:2292:5: error: use of undeclared identifier 'reg'
rtx reg; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/df_bb_reg_info_compute/src/df.c:2300:20: error: expected identifier or '('
unsigned __int64 *(short *)0x; // [rsp+68h] [rbp-28h] 
                   ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/df_bb_reg_info_compute/src/df.c:2300:20: error: expected ')'
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/df_bb_reg_info_compute/src/df.c:2300:19: note: to match this '('
unsigned __int64 *(short *)0x; // [rsp+68h] [rbp-28h] 
                  ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/df_bb_reg_info_compute/src/df.c:2301:16: error: expected identifier or '('
unsigned int *(short *)0xnum_; // [rsp+70h] [rbp-20h] 
               ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/df_bb_reg_info_compute/src/df.c:2301:16: error: expected ')'
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/df_bb_reg_info_compute/src/df.c:2301:15: note: to match this '('
unsigned int *(short *)0xnum_; // [rsp+70h] [rbp-20h] 
              ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/df_bb_reg_info_compute/src/df.c:2306:4: error: expected ';' after expression
rtx insn; // [rsp+88h] [rbp-8h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/df_bb_reg_info_compute/src/df.c:2306:5: error: use of undeclared identifier 'insn'
rtx insn; // [rsp+88h] [rbp-8h] 
    ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/df_bb_reg_info_compute/src/df.c:2308:18: error: expected identifier or '('
 struct reg_info = df_0->regs; 
                 ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/df_bb_reg_info_compute/src/df.c:2310:7: error: use of undeclared identifier 'insn'
for ( insn = bb->end; insn && insn != ( rtx)bb->head[1]; insn = ( rtx)insn[1] ) 
      ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/df_bb_reg_info_compute/src/df.c:2310:31: error: use of undeclared identifier 'insn'
for ( insn = bb->end; insn && insn != ( rtx)bb->head[1]; insn = ( rtx)insn[1] ) 
                              ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/df_bb_reg_info_compute/src/df.c:2310:23: error: use of undeclared identifier 'insn'
for ( insn = bb->end; insn && insn != ( rtx)bb->head[1]; insn = ( rtx)insn[1] ) 
                      ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/df_bb_reg_info_compute/src/df.c:2310:58: error: use of undeclared identifier 'insn'
for ( insn = bb->end; insn && insn != ( rtx)bb->head[1]; insn = ( rtx)insn[1] ) 
                                                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/df_bb_reg_info_compute/src/df.c:2310:71: error: expected ')'
for ( insn = bb->end; insn && insn != ( rtx)bb->head[1]; insn = ( rtx)insn[1] ) 
                                                                      ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/df_bb_reg_info_compute/src/df.c:2310:5: note: to match this '('
for ( insn = bb->end; insn && insn != ( rtx)bb->head[1]; insn = ( rtx)insn[1] ) 
    ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/df_bb_reg_info_compute/src/df.c:2312:7: error: use of undeclared identifier 'insn'
uid = insn->fld[0].rtuint; 
      ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/df_bb_reg_info_compute/src/df.c:2313:27: error: use of undeclared identifier 'insn'
if ( rtx_class[*( _WORD *)insn] == 105 ) 
                          ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/df_bb_reg_info_compute/src/df.c:2330:1: error: use of undeclared identifier 'reg'
reg = use->reg->fld[0].rtx; 
^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/df_bb_reg_info_compute/src/df.c:2332:1: error: use of undeclared identifier 'reg'
reg = use->reg; 
^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/df_bb_reg_info_compute/src/df.c:2333:10: error: use of undeclared identifier 'reg'
uregno = reg->fld[0].rtuint; 
         ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/df_bb_reg_info_compute/src/obj/df.o] Error 1
